--- a/tours-app/src/app/globals.css
+++ b/tours-app/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Amiko:wght@400;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,10 +16,18 @@
   }
 }
 
+.amiko {
+  font-family: "Amiko", sans-serif;
+}
+
+.abeezee {
+  font-family: "ABeeZee", sans-serif;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Amiko", sans-serif;
 }
 
 @layer utilities {
